[tool.poetry]
name = "material-color-utilities-python"
version = "0.2.0"
description = "Python port of material-color-utilities used for Material You colors"
authors = ["hydroxycarbamide", "Avanish Subbiah <avanishsubbiah1@gmail.com>", "0xMRTT", "David Lapshin"]
license = "Apache 2.0"

[tool.poetry.dependencies]
Pillow = "^11.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
